--- a/.github/workflows/build-natives.yml
+++ b/.github/workflows/build-natives.yml
@@ -15,11 +15,13 @@ jobs:
           sudo apt-get install ant mingw-w64 upx
       - name: Clone SDL2
         run: |
-          git clone --depth 1 --branch release-2.26.5 https://github.com/libsdl-org/SDL.git && cd SDL
+          git clone --depth 1 --branch release-2.26.5 https://github.com/libsdl-org/SDL.git
+          cd SDL
       - name: Prepare workspace
         run: |
           mv Makefile.minimal Makefile
-          mkdir build && cd build
+          mkdir build
+          cd build
       - name: Build SDL2 for win32
         run: |
           ../configure --host=i686-w64-mingw32 --disable-audio --disable-render --disable-filesystem  --enable-hidapi
@@ -58,14 +60,16 @@ jobs:
       - name: Get build dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install ant build-essential sdl2-dev
+          sudo apt-get install ant build-essential
       - name: Clone SDL2
         run: |
-          git clone --depth 1 --branch release-2.26.5 https://github.com/libsdl-org/SDL.git && cd SDL
+          git clone --depth 1 --branch release-2.26.5 https://github.com/libsdl-org/SDL.git
+          cd SDL
       - name: Prepare workspace
         run: |
           mv Makefile.minimal Makefile
-          mkdir build && cd build
+          mkdir build
+          cd build
       - name: Build SDL2 for linux64
         run: |
           ../configure --disable-audio --disable-render --disable-filesystem  --enable-hidapi
@@ -101,14 +105,16 @@ jobs:
     steps:
       - name: Get build dependencies
         run: |
-          brew install sdl2 ant
+          brew install ant
       - name: Clone SDL2
         run: |
-          git clone --depth 1 --branch release-2.26.5 https://github.com/libsdl-org/SDL.git && cd SDL
+          git clone --depth 1 --branch release-2.26.5 https://github.com/libsdl-org/SDL.git
+          cd SDL
       - name: Prepare workspace
         run: |
           mv Makefile.minimal Makefile
-          mkdir build && cd build
+          mkdir build
+          cd build
       - name: Build SDL2 for mac64
         run: |
           ../configure --disable-audio --disable-render --disable-filesystem  --enable-hidapi
