--- a/.github/workflows/build-natives.yml
+++ b/.github/workflows/build-natives.yml
@@ -30,7 +30,7 @@ jobs:
       - name: Build SDL2 for win64
         working-directory: SDL/build
         run: |
-          ../make clean
+          cd .. && make clean cd build
           ../configure --host=x86_64-w64-mingw32 --disable-audio --disable-render --disable-filesystem  --enable-hidapi
           make -j 8
           sudo make install
@@ -98,8 +98,15 @@ jobs:
           path: libs/natives/**
 
   build-macos:
-    runs-on: macos-latest
     name: Build MacOS Natives
+
+    strategy:
+      matrix:
+        include: [
+          { os: macos-latest, host_arch: x86_64, macos_target: arm64-apple-macos12, target_arch: aarch64 }
+        ]
+
+    runs-on: ${{ matrix.os }}
 
     steps:
       - name: Get build dependencies
@@ -108,17 +115,15 @@ jobs:
       - name: Clone SDL2
         run: |
           git clone --depth 1 --branch release-2.26.5 https://github.com/libsdl-org/SDL.git
-      - name: Prepare workspace
-        working-directory: SDL
-        run: |
-          mv Makefile.minimal Makefile
-          mkdir build
+      - name: Set up XCode
+        uses: maxim-lobanov/setup-xcode@v1
+        with:
+          xcode-version: latest
       - name: Build SDL2 for mac64
-        working-directory: SDL/build
+        working-directory: SDL/XCode
         run: |
           ../configure --disable-audio --disable-render --disable-filesystem  --enable-hidapi
-          make -j 8
-          sudo make install
+          cc -target ${{ matrix.macos_target }}
       - name: Cleanup build
         run: |
           rm -rf SDL
